bump version to 1.0.4 and enhance ingredient handling in CraftGraph and CraftPlanner